--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -17,5 +17,8 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "nodemon": "^3.1.13"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
