--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,30 @@
-name: CI TEST
+name: Backend CI
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
 
 jobs:
-  test:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Node 설치
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      - name: 의존성 설치
-        run: npm install
+      - run: npm install
 
-      - name: 테스트 실행
-        run: npm test
+      - name: DockerHub 로그인
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: 이미지 빌드
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest .
+
+      - name: Docker Hub push
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
