--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,24 @@
-name: Deploy to EC2
+name: Backend Deploy
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Backend CI"]
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
-      - name: 코드 체크아웃
-        uses: actions/checkout@v4
-
-      - name: DockerHub 로그인
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Docker 이미지 빌드
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/node-server:latest .
-
-      - name: Docker Hub Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/node-server:latest
-
-      - name: EC2에 배포
+      - name: EC2 배포
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker stop node-server || true
-            docker rm node-server || true
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/node-server:latest
-            docker run -d -p 3000:3000 --name node-server ${{ secrets.DOCKERHUB_USERNAME }}/node-server:latest
+            cd /home/ubuntu
+            docker-compose pull
+            docker-compose up -d
